k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sap-frontend
  labels:
    app: sap-frontend
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: sap-frontend
